kubernetes/media/templates/enable-downloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enable-downloads
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: enable-downloads
  template:
    metadata:
      labels:
        app: enable-downloads
    spec:
      securityContext:
        runAsUser: 10926 # 10wan
        runAsGroup: 63342 # media
      serviceAccountName: enable-downloads
      containers:
      - name: enable-downloads
        image: nixery.dev/shell/curl/gnugrep/jq
        command:
        - /bin/bash
        - -c
        - |-
          [...]
