kubernetes/media/templates/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 53559 # jelly
        runAsGroup: 63342 # media
      nodeSelector:
        gluster-volume-mount/ready: "true"
      volumes:
      - name: jellyfin-config
        hostPath:
          path: /data/jellyfin
      - name: ldap-ca
        configMap:
          name: ldap-ca
      - name: media
        hostPath:
          path: /data/media
      - name: cache
        emptyDir:
      - name: logs
        emptyDir:
      containers:
      - name: jellyfin
        # https://github.com/jellyfin/jellyfin/releases
        image: ghcr.io/jellyfin/jellyfin:10.11.5
        volumeMounts:
        - name: jellyfin-config
          mountPath: /config
        - name: ldap-ca
          subPath: ca.pem
          mountPath: /ldap-ca.pem
        - name: media
          mountPath: /data
        - name: cache
          mountPath: /cache
        - name: logs
          mountPath: /config/log
        ports:
        - name: http
          containerPort: 8096
        resources:
          requests:
            cpu: "200m"
            memory: "200Mi"
          limits:
            cpu: "2000m"
            memory: "2000Mi"
            gpu.intel.com/i915: "1"
        startupProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 120 # allow time for upgrade migrations (service restarts a few times)
        readinessProbe:
          httpGet:
            path: /health
            port: http
        livenessProbe:
          httpGet:
            path: /health
            port: http
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "jellyfin.home.cambridge.me"
    secretName: jellyfin-home-cambridge-me-tls
  rules:
  - host: jellyfin.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: http
