kubernetes/media/templates/nzbget.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  # do not specify replicas because cronjobs/enable-downloads changes this value
  # if this value is set then argocd will want to set it back after it drifts
  # replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      securityContext:
        runAsUser: 16924 # 1nzbg
        runAsGroup: 63342 # media
      nodeSelector:
        gluster-volume-mount/ready: "true"
      volumes:
      - name: nzbget-config
        hostPath:
          path: /data/nzbget
      - name: downloads
        hostPath:
          path: /data/media/downloads/nzbget
      containers:
      - name: nzbget
        # https://github.com/linuxserver/docker-nzbget/pkgs/container/transmission
        image: lscr.io/linuxserver/nzbget:v26.0-ls236
        volumeMounts:
        - name: nzbget-config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        ports:
        - name: http
          containerPort: 6789
        # TODO: check resource usage when under heavy load
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "2000m"
            memory: "1000Mi"
        startupProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /
            port: http
        livenessProbe:
          httpGet:
            path: /
            port: http
---
apiVersion: v1
kind: Service
metadata:
  name: nzbget
spec:
  selector:
    app: nzbget
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "nzbget.home.cambridge.me"
    secretName: nzbget-home-cambridge-me-tls
  rules:
  - host: nzbget.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nzbget
            port:
              name: http
