kubernetes/media/templates/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        runAsUser: 17232 # 1rada
        runAsGroup: 63342 # media
      nodeSelector:
        gluster-volume-mount/ready: "true"
      volumes:
      - name: radarr-config
        hostPath:
          path: /data/radarr
      - name: media
        hostPath:
          path: /data/media
      containers:
      - name: radarr
        # https://github.com/linuxserver/docker-radarr/pkgs/container/transmission
        image: lscr.io/linuxserver/radarr:6.1.1.10360-ls297
        volumeMounts:
        - name: radarr-config
          mountPath: /config
        - name: media
          mountPath: /media
        ports:
        - name: http
          containerPort: 7878
        resources:
          requests:
            cpu: "50m"
            memory: "200Mi"
          limits:
            cpu: "200m"
            memory: "500Mi"
        startupProbe:
          httpGet:
            path: /ping
            port: http
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /ping
            port: http
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /ping
            port: http
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "radarr.home.cambridge.me"
    secretName: radarr-home-cambridge-me-tls
  rules:
  - host: radarr.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              name: http
