kubernetes/media/templates/seerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      securityContext:
        runAsUser: 17337 # 1seer
        runAsGroup: 63342 # media
      nodeSelector:
        gluster-volume-mount/ready: "true"
      volumes:
      - name: seerr-config
        hostPath:
          path: /data/seerr
      containers:
      - name: seerr
        # https://github.com/seerr-team/seerr/pkgs/container/seerr
        image: ghcr.io/seerr-team/seerr:v3.4.1
        volumeMounts:
        - name: seerr-config
          mountPath: /app/config
        ports:
        - name: http
          containerPort: 5055
        resources:
          requests:
            cpu: "50m"
            memory: "200Mi"
          limits:
            cpu: "200m"
            memory: "500Mi"
        startupProbe:
          httpGet:
            path: /api/v1/settings/public
            port: http
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /api/v1/settings/public
            port: http
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/v1/settings/public
            port: http
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  selector:
    app: seerr
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "seerr.home.cambridge.me"
    secretName: seerr-home-cambridge-me-tls
  rules:
  - host: seerr.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seerr
            port:
              name: http
