kubernetes/media/templates/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        runAsUser: 17662 # 1sona
        runAsGroup: 63342 # media
      nodeSelector:
        gluster-volume-mount/ready: "true"
      volumes:
      - name: sonarr-config
        hostPath:
          path: /data/sonarr
      - name: media
        hostPath:
          path: /data/media
      containers:
      - name: sonarr
        # https://github.com/linuxserver/docker-sonarr/pkgs/container/transmission
        image: lscr.io/linuxserver/sonarr:4.0.17.2952-ls306
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: media
          mountPath: /media
        ports:
        - name: http
          containerPort: 8989
        resources:
          requests:
            cpu: "50m"
            memory: "200Mi"
          limits:
            cpu: "200m"
            memory: "500Mi"
        startupProbe:
          httpGet:
            path: /ping
            port: http
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /ping
            port: http
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /ping
            port: http
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-oauth2-proxy-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "sonarr.home.cambridge.me"
    secretName: sonarr-home-cambridge-me-tls
  rules:
  - host: sonarr.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              name: http
